syntax = "proto3";

package onight.zjfae.afront.gensazj;

option java_outer_classname="TencentOcrId";
//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_tencentID{
	//
		string userID = 1;	 //当前使用用户的唯一标识
		string nonce = 2;	 //随机数
		string sign = 3;	 //签名值
		string appid = 4;	 //腾讯服务分配的 app_id
		string orderNO = 5;	 //订单号
		string secret = 6; //腾讯服务分配的 secret

}

message Ret_PBAPP_tencentID{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_tencentID data=3;


}

message REQ_PBAPP_tencentID{
	//

}