syntax = "proto3";

package onight.zjfae.afront.gensazj;

//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

option java_outer_classname="TencentFaceCallback";

message PBAPP_tencentface_callback{

}

message Ret_PBAPP_tencentface_callback{
	//

	string returnCode=1;	//报文头x

	string returnMsg=2;	//报文头

	PBAPP_tencentface_callback data=3;


}

message REQ_PBAPP_tencentface_callback{
	//

	string orderNo = 1; //,订单号

	string sessionFlag = 2; //,标志位，根据前端上送进行人脸识别的订单好session存储，人脸识别：“face”;身份证识别：“IdCard”

	string verifyScene =3;//业务类型,unbindCard:强制解绑；changeCard：换卡

	string photo = 4;//照片


}