syntax = "proto3";

package onight.zjfae.afront.gens;

//Generated By BrewRobot:Thu Jul 06 17:32:00 CST 2017

message PBIFE_userinfomanage_updateCertificateDetail{
	///ife/login.html


}

message Ret_PBIFE_userinfomanage_updateCertificateDetail{
	///ife/login.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_userinfomanage_updateCertificateDetail data=3;


}


message REQ_PBIFE_userinfomanage_updateCertificateDetail{

	///ife/login.html

	string name = 1; //,姓名

	string sex = 2; //,性别  1：男；0：女,

	string nation = 3; //,民族,

	string certificateCode = 4; //,身份证号,

	string certificateAddressApp = 5; //,住址,

	string certificateStart = 6; //,身份证有效期开始时间,

	string certificateValidity = 7; //,身份证有效期结束时间,

	string issuingAuthority  = 8; //身份证签发机关

	string ocrOrderNo=9; //人脸识别订单号

	string certificatePositive=10;//身份证图片正面保存地址

	string certificateSide=11;//身份证图片背面保存地址


	string cardVaildityDate=12; //身份证有效期(app)

	string tencentOcrResult=13; //腾讯接口返回数据

	string certificatePositiveName=14;//身份证图片正面名称

	string certificateSideName=15;//身份证图片背面名称

	string unbindChangeCard=16;//解绑换卡：空=否；1是；


}